# askmyfiles

./: .gitignore  Makefile  README.md  docker-compose-ollama.yaml  docker-compose.yaml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: main.py  utils.py
backend/app/core/: __init__.py  configs.py
backend/app/models/: chat_models.py  status_models.py
backend/app/services/: __init__.py  celery.py  database.py  document_stores.py  pipelines.py
backend/config/qdrant/: local.yaml
backend/qdrant/config/: production.yaml
backend/scripts/: docker-entrypoint.sh  init_mongo.py
frontend/: .env  .eslintrc.json  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.web.json
frontend/public/: electron.js
frontend/resources/: icon.icns
frontend/src/: App.js
frontend/src/main/: index.ts
frontend/src/preload/: index.d.ts  index.ts
frontend/src/renderer/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/renderer/src/: App copy.tsx  App.tsx
frontend/src/renderer/src/assets/: base.css
frontend/src/renderer/src/layout/: ChatView.tsx  Footer.tsx  Header.tsx  SideView.tsx  ViewChatHistory.tsx  ViewFolders.tsx  ViewHelp.tsx  ViewSettings.tsx
frontend/src/renderer/src/shared/components/ui/: accordion.tsx  alert-dialog.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  dropdown-menu.tsx  progress.tsx  radio-group.tsx  select.tsx  sheet.tsx  sidebar.tsx  tabs.tsx  tooltip.tsx
frontend/src/renderer/src/shared/components/ui/chat/: chat-bubble.tsx  chat-input.tsx  chat-message-list.tsx  expandable-chat.tsx
frontend/src/renderer/src/store/: chatHistoryStore.tsx  chatStore.tsx  foldersStore.tsx  settingsStore.tsx
makefiles/: langfuse.env.dev  langfuse.env.dev.example  langfuse.override.template.yaml
