[tool.poetry]
name = "search-it-backend"
version = "0.1.0"
description = ""
authors = ["Jie Han <jiehan1029@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.11"
pdfplumber = "^0.11.5"
pydantic = "^2.10.6"
python-docx = "^1.1.2"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
