[tool.poetry]
name = "askmyfiles-backend"
version = "0.1.0"
description = ""
authors = ["Jie Han <jiehan1029@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.11"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"
haystack-ai = "^2.11.2"
markdown-it-py = "^3.0.0"
mdit-plain = "^1.0.1"
pypdf = "^5.4.0"
sentence-transformers = ">=3.0.0"
torch = "^2.6.0"
python-dotenv = "^1.1.0"
beanie = "^1.29.0"
motor = "^3.7.0"
qdrant-haystack = "^9.1.1"
google-ai-haystack = "^5.1.0"
ollama-haystack = "^2.3.0"
celery = "^5.5.0"
redis = "^5.2.1"
bunnet = "^1.3.0"
websockets = "^15.0.1"
langfuse = "^2.60.3"
langfuse-haystack = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
